--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "moment": "2.22.2",
+    "canvas": "1.6.11",
+    "jimp": "0.2.28"
   }
 }
