--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "request": "2.81.0",
     "moment": "2.22.2",
     "canvas": "1.6.11",
-    "jimp": "0.2.28",
-    "canvas-prebuilt": "1.6.5-prerelease.1",
-    "jimp": "0.2.28",
-    "moment": "2.22.2"
+    "jimp": "0.2.28"
   }
 }
